k8s/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cicd-poc
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - poc-dev.app.emfnet.ch
  rules:
    - host: poc-dev.app.emfnet.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cicd-poc
                port:
                  number: 80
